# ship_routing

./: .gitignore  Cargo.toml  README.md
graph_lib/: Cargo.toml
graph_lib/src/: file_interface.rs  island.rs  lib.rs  random_point.rs  test_polygon_test.rs
osm/: .gitignore  package.json
osm/src/: index.html
osm/src-tauri/: Cargo.toml  tauri.conf.json
osm/src-tauri/src/: binary_minheap.rs  datastructs.rs  dijkstra.rs  graph.rs  main.rs
preprocessing/: .gitignore  Cargo.toml
preprocessing/src/: binary_minheap_alex.rs  datastructs.rs  generate_graph.rs  generate_map.rs  graph.rs  import_pbf.rs  island.rs  main.rs  test_polygon_test.rs  tools.rs
ship-routing/: Cargo.toml  tauri.conf.json
ship-routing/html/libs/leaflet/: leaflet.css
ship-routing/src/: a_star.rs  bidirectional_a_star.rs  bidirectional_dijkstra.rs  binary_minheap.rs  binary_minheap_map.rs  ch.rs  coordinates.rs  dijkstra.rs  graph.rs  main.rs  test_routing.rs  witness_search.rs  ws_a_star.rs
src/: OSMrouting.html  datastructs.rs  dijkstra.rs  generate_map.rs  import_pbf.rs  main.rs  read_pbf.rs
