[package]
name = "osm"
version = "0.1.0"
authors = ["Alexander Harner", "Fabian Hertel"]
description = "An application for ship routing on the ocean based on OpenStreet Map Data."

edition = "2021"    # rust edition

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
osmpbf = "0.2"
geojson ="*"